Complete build Resume page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["coldbrew", "Minh", "Pham"]
+  "cSpell.words": [
+    "Bizzi",
+    "coldbrew",
+    "Coursera",
+    "Minh",
+    "Pham",
+    "Thang",
+    "Udemy"
+  ]
 }
