--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "aos": "^2.3.4",
     "date-fns": "^2.29.3",
+    "got": "11.8.2",
+    "graphql": "^16.6.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,7 +23,11 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.9",
+    "@graphql-codegen/client-preset": "^1.1.3",
+    "@graphql-codegen/typescript": "^2.8.1",
     "@types/aos": "^3.0.4",
+    "@types/got": "^9.6.12",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -28,7 +35,9 @@
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
