--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "prestart": "yarn generate",
+    "predev": "yarn generate"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@emailjs/browser": "^3.7.0",
     "aos": "^2.3.4",
     "date-fns": "^2.29.3",
@@ -26,6 +29,9 @@
     "@graphql-codegen/cli": "^2.13.9",
     "@graphql-codegen/client-preset": "^1.1.3",
     "@graphql-codegen/typescript": "^2.8.1",
+    "@graphql-codegen/typescript-operations": "^2.5.6",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@graphql-eslint/eslint-plugin": "^3.13.0",
     "@types/aos": "^3.0.4",
     "@types/got": "^9.6.12",
     "@types/node": "18.11.3",
