--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@apollo/client": "^3.7.1",
     "@emailjs/browser": "^3.7.0",
     "aos": "^2.3.4",
+    "axios": "^1.1.3",
     "date-fns": "^2.29.3",
-    "got": "11.8.2",
     "graphql": "^16.6.0",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -33,7 +33,6 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.6",
     "@graphql-eslint/eslint-plugin": "^3.13.0",
     "@types/aos": "^3.0.4",
-    "@types/got": "^9.6.12",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
