--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@emailjs/browser": "^3.7.0",
+    "@vercel/analytics": "^0.1.3",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
